project/logs/20250624_111358.log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatrueLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3D.VS.hlsl,profile:vs_6_0

Object3D.VS.hlsl:11:8: error: redefinition of 'VertexShaderInput'
struct VertexShaderInput
       ^
./Object3d.hlsli:8:8: note: previous definition is here
struct VertexShaderInput
       ^

